--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,6 @@ body {
   );
   background-repeat: no-repeat;
   background-size: cover;
-  
 }
 .header > .img_about {
   display: flex;
@@ -52,7 +51,7 @@ h1 {
   color: white;
   font-size: 50px;
   text-shadow: 5px 5px 4px rgb(39, 128, 211);
-  position:fixed;
+  position: fixed;
   z-index: 2;
 }
 
@@ -134,9 +133,7 @@ h1 {
   position: relative;
   z-index: -1;
   padding: 10px;
-
   background-color: rgba(66, 151, 190, 0.295);
-
 }
 
 h2 {
@@ -147,11 +144,59 @@ h2 {
   text-shadow: 2px 1px 8px rgba(255, 255, 255, 0.226);
 }
 
-
-#startpage > p, #about > p, #projects > p, #links > p{
+#startpage > p,
+#about > p,
+#projects > p,
+#links > p {
   color: rgb(255, 255, 255);
   padding: 10px;
   background-color: rgba(103, 151, 212, 0.322);
+}
 
- 
+@media screen and (min-width: 1024px) and (max-width: 1199px) {
+  h1 {
+    align-content: center;
+    font-size: 100px;
+  }
+  .nav_res {
+    margin-top: 100px;
+    margin-left: 580px;
+  }
+  .nav {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  #main {
+    display: flex;
+    flex-direction: column;
+    border: 1px black solid;
+    margin-top: 130px;
+
+    font-family: arial;
+    position: relative;
+    z-index: -1;
+    padding: 10px;
+    background-color: rgba(66, 151, 190, 0.295);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .img_about {
+    position: fixed;
+  }
+
+  h1 {
+    align-content: center;
+    font-size: 100px;
+    position: absolute;
+  }
+
+  .nav_res {
+    margin-top: 100px;
+    margin-left: 760px;
+    position: fixed;
+  }
 }
