--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,30 @@ h2 {
   background-color: rgba(103, 151, 212, 0.322);
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1199px) {
+
+#about, #projects, #links{
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+
+  
+}
+
+#about > img, #projects > img, #links > img{
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  width: 200px;
+}
+
+#projects > img{
+  height: 300px;
+  width: 400px;
+}
+
+
+
+@media screen and (min-width: 1023px) and (max-width: 1199px) {
   h1 {
     align-content: center;
     font-size: 100px;
@@ -174,7 +197,6 @@ h2 {
     flex-direction: column;
     border: 1px black solid;
     margin-top: 130px;
-
     font-family: arial;
     position: relative;
     z-index: -1;
