--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,8 @@ h2 {
   flex-direction: column;
   height: 300px;
   width: 200px;
+  border: 10px rgba(110, 136, 192, 0.671) solid;
+  border-radius: 20px;
 }
 
 #projects > img{
@@ -179,6 +181,10 @@ h2 {
 
 .content > p {
   padding: 10px;
+}
+
+.img:hover{
+    border: 10px rgba(248, 248, 248, 0.671) solid;
 }
 
 @media screen and (min-width: 1023px) and (max-width: 1199px) {
