--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ body {
 
 h1 {
   margin-top: 10px;
-  margin-left: 50px;
+  margin-left: 4git0px;
   font-family: "Russo One";
   color: white;
   font-size: 50px;
