--- a/css/main.css
+++ b/css/main.css
@@ -158,9 +158,10 @@ h2 {
 #about > p,
 #projects > p,
 #links > p {
-  color: rgb(255, 255, 255);
+  
   padding: 5px;
   background-color: rgba(103, 151, 212, 0.322);
+  font-size: 16px;
 }
 
 
