--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ h1 {
   margin-left: 20px;
   font-family: "Russo One";
   color: white;
-  font-size: 50px;
+  font-size: 12vw;
   text-shadow: 5px 5px 4px rgb(39, 128, 211);
   position: fixed;
   z-index: 2;
@@ -69,6 +69,10 @@ h1 {
     margin-left: 420px;
     margin-top: 80px;
   }  
+
+  h1{
+    font-size: 50px;
+  }
 }
 
 .btn_layer,
