--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,11 @@ h1 {
   background-color: rgba(66, 151, 190, 0.295);
 }
 
+#projects > img {
+  height: 50px;
+  width: 75px;
+}
+
 /* ---------------------dropdown Menü----------------------------------------- */
 .nav_res {
   display: flex;
@@ -195,7 +200,8 @@ h2 {
   width: 100%;
   text-shadow: 2px 1px 8px rgb(53, 7, 7);
   box-shadow: 2px 2px 9px thistle;
-    border: 1px rgb(123, 255, 0) solid;
+  text-align: center;
+
 }
 
 #startpage > p,
@@ -205,6 +211,7 @@ h2 {
   padding: 5px;
   background-color: rgba(103, 151, 212, 0.322);
   font-size: 16px;
+ 
 }
 
 #startpage,
@@ -218,17 +225,16 @@ h2 {
 
 #about > img,
 #projects > img,
-#links > img {
+#links > img 
+{
   display: flex;
   flex-direction: column;
-  height: 200px;
-  width: 100px;
-  border: 10px rgba(110, 136, 192, 0.671) solid;
+  height: 150px;
+  width: 75px;
+  border: 2px rgba(110, 136, 192, 0.671) solid;
   border-radius: 20px;
 }
-#about > img:hover {
-  border: 10px rgba(252, 252, 252, 0.671) solid;
-}
+
 
 #projects > img {
   height: 300px;
@@ -249,8 +255,6 @@ img {
     font-size: 60px;
   }
 }
-
-
   /* .nav_desk {
     display: flex;
     flex-direction: row;
