--- a/css/main.css
+++ b/css/main.css
@@ -49,11 +49,16 @@ h1 {
   margin-top: 10px;
   margin-left: 20px;
   font-family: "Russo One";
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 12vw;
   text-shadow: 5px 5px 4px rgb(39, 128, 211);
   position: fixed;
   z-index: 2;
+ 
+}
+
+h3 {
+  font-weight: bold;
 }
 
 #main {
@@ -65,11 +70,6 @@ h1 {
   z-index: -1;
   padding: 10px;
   background-color: rgba(66, 151, 190, 0.295);
-}
-
-#projects > img {
-  height: 50px;
-  width: 75px;
 }
 
 /* ---------------------dropdown Menü----------------------------------------- */
@@ -86,35 +86,47 @@ h1 {
   display: none;
 }
 
-@media screen and (min-width: 480px){
+@media screen and (min-width: 480px) {
   .nav_res {
     margin-left: 420px;
     display: none;
   }
+.header > .img_about {
+  height: 200px;
+}
 
   h1 {
     display: flex;
     position: relative;
-    font-size: 50px;
+    color:rgb(255, 255, 255);
+    font-size: 100px;
+    
   }
-  
-.nav_desk {
+
+  .nav_desk {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     position: relative;
     z-index: 200;
-    font-size: 30px;
+    font-family: "Russo One";
+    font-size: 40px;
     text-decoration: none;
+    padding: 16px;
   }
   .nav_desk > li {
     list-style: none;
   }
   .nav_desk > li a {
-    color: white;
+    color: rgb(255, 255, 255);
+    text-shadow: 5px 5px 5px rgb(20, 75, 126);
     text-decoration: none;
+  }  
+  
+  .nav_desk > li a:hover {
+    color: rgb(0, 162, 255);
+    text-decoration: underline;
   }
-
 }
 
 .btn_layer,
@@ -132,7 +144,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: -65px;
+  margin-top: -60px;
   align-items: center;
 }
 
@@ -156,9 +168,12 @@ h1 {
   display: none;
   font-size: 30px;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #018dff71;
   min-width: auto;
-  z-index: 1;
+  padding: 10px;
+  margin-right: 90px;
+  z-index: 2;
+  border-radius: 10px;
 }
 
 .dropdown-content {
@@ -171,6 +186,8 @@ h1 {
   padding: 5px;
   text-decoration: none;
   display: block;
+  color: rgb(255, 255, 255);
+  text-shadow: 5px 5px 5px black;
 }
 
 .nav:hover .dropdown-content {
@@ -178,8 +195,11 @@ h1 {
 }
 
 .dropdown-content > li > a:hover {
-  color: rgb(45, 124, 170);
+  color: rgb(23, 91, 131);
+  text-shadow: 5px 5px 5px black;
 }
+
+/* ----------------------dropdown ende----------------------------- */
 
 #main {
   display: flex;
@@ -187,7 +207,6 @@ h1 {
   font-family: arial;
   position: relative;
   z-index: -1;
-
   padding: 10px;
   background-color: rgba(66, 151, 190, 0.295);
 }
@@ -201,7 +220,6 @@ h2 {
   text-shadow: 2px 1px 8px rgb(53, 7, 7);
   box-shadow: 2px 2px 9px thistle;
   text-align: center;
-
 }
 
 #startpage > p,
@@ -211,7 +229,6 @@ h2 {
   padding: 5px;
   background-color: rgba(103, 151, 212, 0.322);
   font-size: 16px;
- 
 }
 
 #startpage,
@@ -225,8 +242,7 @@ h2 {
 
 #about > img,
 #projects > img,
-#links > img 
-{
+#links > img {
   display: flex;
   flex-direction: column;
   height: 150px;
@@ -234,7 +250,6 @@ h2 {
   border: 2px rgba(110, 136, 192, 0.671) solid;
   border-radius: 20px;
 }
-
 
 #projects > img {
   height: 300px;
@@ -252,10 +267,10 @@ img {
 @media screen and (min-width: 1023px) and (max-width: 1199px) {
   h1 {
     align-content: center;
-    font-size: 60px;
+    font-size: 100px;
   }
 }
-  /* .nav_desk {
+/* .nav_desk {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -273,9 +288,6 @@ img {
     text-decoration: none;
   } */
 
-  
-}
-
 /* @media screen and (min-width: 1200px) {
   .img_about {
     position: fixed;
@@ -292,7 +304,3 @@ img {
     position: fixed;
   }
 } */
-
-
-
-
