--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
   grid-area: footer;
 }
 body {
+  width: 100%;
   background: radial-gradient(
     circle,
     rgba(9, 9, 121, 0.9528011888349089) -43%,
@@ -61,20 +62,12 @@ h3 {
   display: flex;
   flex-direction: column;
   padding: 0px;
-  margin-top: 0px;
+  margin-top: -50px;
   font-family: arial;
   background-color: rgba(66, 151, 190, 0.295);
+  width: 100%;
 
   
-}
-
-img {
-  opacity: 50%;
-}
-
-img {
-  opacity:100%;
-  transition:opacity 2s
 }
 
 /* ---------------------dropdown Menü----------------------------------------- */
@@ -94,6 +87,10 @@ img {
 }
 
 @media screen and (min-width: 480px) {
+.main{
+  margin-top: -130px;
+}
+
   .nav_res {
     margin-left: 190px;
   }
@@ -286,13 +283,13 @@ img {
     font-size: 100px;
   }
 }
-/* .nav_desk {
+.nav_desk {
     display: flex;
-    flex-direction: row;
+  text-align: center;
     justify-content: space-around;
     color: red;
     position: relative;
-    z-index: 200;
+    /* z-index: 200; */
     font-size: 30px;
     text-decoration: none;
   }
