--- a/css/main.css
+++ b/css/main.css
@@ -335,6 +335,11 @@ img {
   text-decoration: none;
 }
 
+.content_yt > iframe{
+  border: 2px rgb(7, 170, 235) solid;
+  border-radius: 50%;
+  padding: 10px;
+}
 /* @media screen and (min-width: 1200px) {
   .img_about {
     position: fixed;
